--- a/lab-03.html
+++ b/lab-03.html
@@ -397,7 +397,9 @@ law axis?</em></p>
 <div id="exercise-1" class="section level2">
 <h2>Exercise 1</h2>
 <p>What is the difference between <em>wide format</em> data and <em>long
-format</em> data?</p>
+format</em> data? #wide format is where observations are spread across
+several columns, long format is every column is where every olumn is a
+seperate variable ad every row is a different obsrevation.</p>
 <p>Is the format <code>staff</code> data <em>wide</em> or
 <em>long</em>?</p>
 <p>How many observations are there in the data set?</p>
