--- a/lab-03.html
+++ b/lab-03.html
@@ -400,9 +400,9 @@ law axis?</em></p>
 format</em> data? wide format is where observations are spread across
 several columns, long format is every column is where every olumn is a
 seperate variable ad every row is a different obsrevation.</p>
-<p>Is the format <code>staff</code> data <em>wide</em> or
-<em>long</em>?</p>
-<p>How many observations are there in the data set?</p>
+<p>Is the format <code>staff</code> data <em>wide</em> or <em>long</em>?
+wide</p>
+<p>How many observations are there in the data set? 55</p>
 </div>
 <div id="exercise-2" class="section level2">
 <h2>Exercise 2</h2>
